# Depi_Python_Task1

./: README.md  pyproject.toml
pdc_task1/: app.py  utils.py
